# DesktopPetMaker

./: .gitattributes  .gitignore  ASSET_LICENSES.json  ASSET_PROVENANCE.md  BETA_RELEASE_NOTES.md  CMakeLists.txt  CONTRIBUTING.md  CURRENT_PROJECT_STATE.md  LICENSE_COMPLIANCE_APPROVAL.md  LICENSE_STATUS.md  PORTABLE_README.md  README.md  SECURITY.md  SOURCE_MANIFEST_SHA256.txt  THIRD_PARTY_NOTICES.md  actionmaterialwindow.cpp  aiactionvalidator.h  aiassetpromptwizard.h  aiconversationroommanager.cpp  aidialogwindow.h  aiprovider.h  aiproviderprofileregistry.h  aiproviderprofileservice.cpp  aisettingsdialog.cpp  aisettingsdialog.h  alphaboundingboxutil.cpp  alphaboundingboxutil.h  archivecommandrunner.cpp  archivecommandrunner.h  assetqualityanalyzer.cpp  chathistoryentry.h  credentialstore.cpp  credentialstore.h  desktop_pet.rc  journalwindow.cpp  journalwindow.h  main.cpp  motionpromptlibrary.cpp  petairequestcoordinator.cpp  petairequestcoordinator.h  (+23 more)
.githooks/: pre-commit
docs/: GITHUB_PUBLISHING_CHECKLIST.md  README.md  SOURCE_FILE_INDEX.md
licenses/: Microsoft-Runtime-Notices.txt  THIRD_PARTY_COMPONENTS.json
src/: README.md
src/ai/chat/: aiconversationroom.cpp  aiconversationroom.h  aiconversationroommanager.h  aiconversationroomrepository.cpp  aiconversationroomrepository.h
src/ai/core/: aiactiondescriptor.h  aiactionvalidator.cpp  aiprovider.cpp  aiproviderprofileregistry.cpp  aiproviderprofileservice.h
src/ai/ui/: aiconversationconsolewindow.cpp  aiconversationconsolewindow.h  aidialogwindow.cpp
src/app/: petcontrolcenterwindow.cpp  petcontrolcenterwindow.h  systemtraycontroller.cpp  systemtraycontroller.h
src/editor/: actionmaterialwindow.h  aiassetpromptwizard.cpp  assetqualityanalyzer.h  editorwindow.cpp  editorwindow.h  motionpromptlibrary.h  proceduralmotiongenerator.cpp
src/import/: spritesheetimportdialog.cpp  spritesheetslicer.h
src/journal/: moodjournal.cpp  moodjournal.h
src/project/: petprojectregistry.h
src/runtime/: renderbackend.cpp  renderbackend.h  runtimepetmanager.h  runtimepetwindow.cpp  runtimepetwindow.h  screenplacementutil.cpp
src/ui/theme/: apptheme.cpp  iconprovider.h  themeconstants.h
tests/: asset_transaction_tests.cpp  core_project_tests.cpp  credential_store_windows_integration_tests.cpp  formal_asset_tests.cpp  gui_widget_tests.cpp  multi_ai_lifecycle_tests.cpp  multi_ai_room_tests.cpp  petpack_security_tests.cpp  platform_gui_tests.cpp  provider_credential_tests.cpp  runtime_action_tests.cpp  shimeji_transaction_tests.cpp  sprite_sheet_tests.cpp  test_support.cpp  test_support.h  ui_theme_tests.cpp
tools/: check_cmake_source_completeness.py  check_text_encoding.py  create_final_artifact_chain.py  create_original_sample_pet.py  create_portable_package.ps1  create_review_bundle.ps1  create_source_manifest.py  create_standard_zip.py  generate_app_icon.py  install_git_hooks.ps1  sign_windows_artifacts.ps1  test_manifest_gate.py  validate_release_pets.py  verify_source_manifest.py
ui/theme/: apptheme.h  iconprovider.cpp
